# simplecc-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md
benches/: benchmark.rs
data/: README.md
src/: dicts.rs  lib.rs  tests.rs
